remove deprecated method URL constructor usage